<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">demo_vnpt</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="lbl_t_i_kho_n">Tài khoản</string>
<string name="lbl_ch_u_ph_c_h_u">Châu Phúc Hậu</string>
<string name="lbl_t_l2">Tỷ Lệ:</string>
<string name="lbl_nh_n_x_t2">Nhận Xét:</string>
<string name="msg_tr_n_th_thu_h">Trần Thị Thu Hồng</string>
<string name="msg_nh_n_x_t_t_y">Nhận Xét: Đạt Yêu Cầu</string>
<string name="msg_ho_nh_th_nh_nh2">Hoành thành nhập liệu số lượng 
bán trước ngày 20</string>
<string name="lbl_c_n_l_i_15">Còn Lại: 15</string>
<string name="lbl_ph_m_b_o_th">Phạm Bão Thơ</string>
<string name="msg_m_hrm_vnp0053">Mã HRM: VNP005322</string>
<string name="lbl_t_l">Tỷ Lệ</string>
<string name="msg_m_hrm_vnp0052">Mã HRM: VNP005282</string>
<string name="msg_nguy_n_th_nh_mi">Nguyễn Thành Minh</string>
<string name="msg_nh_p_qu_n_l_b2"> Nhập Quản Lý Bán Hàng </string>
<string name="lbl_s_l_ng">Số Lượng </string>
<string name="lbl_50">50</string>
<string name="msg_t_n_nh_n_vi_n">Tên Nhân Viên: Châu Phúc Hậu</string>
<string name="msg_nguy_n_th_thu">Nguyễn Thị Thu Nguyệt</string>
<string name="lbl_x_c_nh_n">Xác nhận</string>
<string name="lbl_15">15</string>
<string name="msg_xem_qu_n_l_b_n2"> Xem Quản Lý Bán Hàng </string>
<string name="lbl_ch_th_ch">Chú Thích: </string>
<string name="msg_ho_nh_th_nh_nh">Hoành thành nhập liệu số lượng bán trước ngày 20</string>
<string name="msg_s_i_n_tho_i2">Số Điện Thoại: 0913813759</string>
<string name="lbl"> ___</string>
<string name="msg_nh_p_qu_n_l_b">Nhập Quản Lý Bán Hàng</string>
<string name="lbl_t_n_nh_n_vi_n">Tên Nhân Viên</string>
<string name="msg_ch_c_danh_nh_n">Chức Danh: Nhân Viên Kinh Doanh</string>
<string name="lbl_nh_n_x_t">Nhận Xét</string>
<string name="lbl_ch_ti_u_50">Chỉ Tiêu: 50</string>
<string name="msg_qu_n_l_b_n_h_n">Quản Lý Bán Hàng </string>
<string name="msg_v_tr_nh_n_vi">Vị Trí: Nhân Viên Kinh Doanh Địa Bàn</string>
<string name="msg_ch_n_t_n_nh_n_v">Chọn Tên Nhân Viên</string>
<string name="lbl_ch_ti_u">Chỉ Tiêu </string>
<string name="lbl_ng_xu_t">Đăng Xuất</string>
<string name="msg_nguy_n_th_nh">Nguyễn Thị Như Thảo</string>
<string name="msg_sim_di_ng">Sim Di Động: ___</string>
<string name="lbl_c_n_l_i">Còn Lại</string>
<string name="lbl_phan_minh_t_ng">Phan Minh Tường</string>
<string name="lbl_l_th_nh_nam">Lê Thành Nam</string>
<string name="lbl_th_ng_1">Tháng 1</string>
<string name="lbl_s_l_ng_35">Số Lượng: 35</string>
<string name="lbl_ng_nh_p">Đăng Nhập</string>
<string name="lbl_ch_th_ch2">Chú Thích:</string>
<string name="lbl_nh_p_b_ng_file">Nhập bằng File:</string>
<string name="msg_xem_qu_n_l_b_n">Xem Quản Lý Bán Hàng</string>
<string name="msg_ch_th_ch_ho_n">Chú Thích: Hoành thành nhập liệu số lượng 
bán trước ngày 20</string>
<string name="lbl_t_y_u_c_u">Đạt Yêu Cầu</string>
<string name="msg_v_tr_gi_m">Vị Trí: Giám Đốc PBH Khư Vực</string>
<string name="msg_s_i_n_tho_i">Số Điện Thoại: 0917119774</string>
<string name="lbl_t_l_70">Tỷ Lệ: 70%</string>
<string name="msg_nguy_n_th_than">Nguyễn Thị Thanh Thảo</string>
<string name="lbl_ch_ti_u2">Chỉ Tiêu:</string>
<string name="lbl_s_l_ng2">Số Lượng</string>
<string name="lbl_70">70%</string>
<string name="msg_ch_c_danh_gi_m">Chức Danh: Giám Đốc PBH</string>
<string name="lbl_35">35</string>
<string name="msg_file_excel_xl">File Excel (.xlsx)</string>
<string name="lbl_sim_di_ng">Sim Di Động</string>
<string name="lbl_cao_m_ng_tuy_n">Cao Mộng Tuyền</string>
<string name="lbl_sim_di_ng2">Sim Di Động:</string>
<string name="msg_th_ng_tin_qu_n">Thông Tin Quản Trị Viên</string>
<string name="msg_qu_n_l_b_n_h_n2">Quản Lý Bán Hàng: Sim Di Động</string>
<string name="lbl_m_t_kh_u">Mật khẩu</string>
<string name="msg_th_ng_tin_nh_n">Thông Tin Nhân Viên</string>
<string name="msg_qu_n_l_b_n_h_n3">Quản Lý Bán Hàng</string>
<string name="msg_t_n_qu_n_tr_vi">Tên Quản Trị Viên: Trương Như Quốc Bảo</string>
</resources>
