<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="xemQuNLBNHNgVM" type="com.demovnpt.app.modules.xemqunlbnhng.data.viewmodel.XemQuNLBNHNgVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearColumnellipsetwo"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <LinearLayout android:gravity="start"
            android:id="@+id/linearXemQunLBn"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylewhite_A700">
            <FrameLayout android:id="@+id/frameStackellipsetwo"
                android:layout_height="@dimen/_172pxv"
                android:layout_marginEnd="@dimen/_10pxh" android:layout_width="@dimen/_289pxh">
                <ImageView android:id="@+id/imageEllipseTwo"
                    android:layout_gravity="top|start"
                    android:layout_height="@dimen/_158pxh"
                    android:layout_marginBottom="@dimen/_10pxv"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_width="@dimen/_106pxh"
                    android:scaleType="fitXY"
                    imageRes="@{@drawable/img_ellipse2_4}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_ellipse2_4"/>
                <ImageView android:id="@+id/imageEllipseOne"
                    android:layout_gravity="top|start"
                    android:layout_height="@dimen/_95pxh"
                    android:layout_marginBottom="@dimen/_10pxv"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_width="@dimen/_200pxh"
                    android:scaleType="fitXY"
                    imageRes="@{@drawable/img_ellipse1_4}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_ellipse1_4"/>
                <ImageView android:id="@+id/imageRectangleSeven"
                    android:layout_gravity="bottom|end"
                    android:layout_height="@dimen/_150pxh"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_10pxv"
                    android:layout_width="@dimen/_150pxh"
                    android:scaleType="fitXY"
                    imageRes="@{@drawable/img_rectangle7}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_rectangle7"/>
            </FrameLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearInfo"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_24pxh"
                android:layout_marginStart="@dimen/_30pxh"
                android:layout_marginTop="@dimen/_14pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <LinearLayout android:gravity="start"
                    android:id="@+id/linearColumntnquntrvi"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_7pxv"
                    android:layout_weight="0.94"
                    android:layout_width="0dp" android:orientation="vertical">
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtTnQunTrVi"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_10pxh"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:text="@{xemQuNLBNHNgVM.xemQuNLBNHNgModel.txtTnQunTrVi}"
                        style="@style/txtAnekLatinregular16" tools:text="@string/msg_t_n_qu_n_tr_vi"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtMHRMVNP0052"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_10pxh"
                        android:layout_marginTop="@dimen/_11pxv"
                        android:layout_width="wrap_content"
                        android:singleLine="true"
                        android:text="@{xemQuNLBNHNgVM.xemQuNLBNHNgModel.txtMHRMVNP0052}"
                        style="@style/txtAnekLatinregular16" tools:text="@string/msg_m_hrm_vnp0052"/>
                </LinearLayout>
                <ImageView android:id="@+id/imageIconparksolid"
                    android:layout_height="@dimen/_24pxh"
                    android:layout_marginBottom="@dimen/_30pxv"
                    android:layout_width="@dimen/_24pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_iconparksolid"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_iconparksolid"/>
            </LinearLayout>
            <LinearLayout android:gravity="center_vertical"
                android:id="@+id/linearRowlanguage"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6pxv"
                android:layout_width="match_parent"
                android:orientation="horizontal" style="@style/groupStyleteal_200_26">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtLanguage"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_8pxv"
                    android:layout_marginStart="@dimen/_79pxh"
                    android:layout_marginTop="@dimen/_9pxv"
                    android:layout_weight="0.66"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{xemQuNLBNHNgVM.xemQuNLBNHNgModel.txtLanguage}"
                    style="@style/txtAnekLatinsemibold20" tools:text="@string/msg_xem_qu_n_l_b_n2"/>
                <Spinner android:id="@+id/spinnerThngCounter"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_7pxv"
                    android:layout_marginEnd="@dimen/_40pxh"
                    android:layout_marginStart="@dimen/_6pxh"
                    android:layout_marginTop="@dimen/_10pxv"
                    android:layout_weight="0.34"
                    android:layout_width="0dp" tools:listitem="@layout/spinner_item"/>
            </LinearLayout>
            <FrameLayout android:id="@+id/frameStackellipsefour"
                android:layout_gravity="end"
                android:layout_height="@dimen/_689pxv"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_23pxv" android:layout_width="@dimen/_398pxh">
                <ImageView android:id="@+id/imageEllipseFour"
                    android:layout_gravity="bottom|end"
                    android:layout_height="@dimen/_200pxh"
                    android:layout_marginBottom="@dimen/_86pxv"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_86pxv"
                    android:layout_width="@dimen/_86pxh"
                    android:scaleType="fitXY"
                    imageRes="@{@drawable/img_ellipse4_4}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_ellipse4_4"/>
                <ImageView android:id="@+id/imageEllipseThree"
                    android:layout_gravity="bottom|end"
                    android:layout_height="@dimen/_200pxh"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_10pxv"
                    android:layout_width="@dimen/_172pxh"
                    android:scaleType="fitXY"
                    imageRes="@{@drawable/img_ellipse3_4}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_ellipse3_4"/>
                <LinearLayout android:id="@+id/linearColumngroup230"
                    android:layout_gravity="top|start"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_10pxv"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_width="match_parent" android:orientation="vertical">
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtGroup230"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:paddingBottom="@dimen/_13pxv"
                        android:paddingStart="@dimen/_10pxh"
                        android:paddingTop="@dimen/_11pxv"
                        android:singleLine="true"
                        android:text="@{xemQuNLBNHNgVM.xemQuNLBNHNgModel.txtGroup230}"
                        style="@style/txtSolidRounded_3" tools:text="@string/msg_tr_n_th_thu_h"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtGroup231"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_16pxv"
                        android:layout_width="match_parent"
                        android:paddingBottom="@dimen/_14pxv"
                        android:paddingStart="@dimen/_10pxh"
                        android:paddingTop="@dimen/_10pxv"
                        android:singleLine="true"
                        android:text="@{xemQuNLBNHNgVM.xemQuNLBNHNgModel.txtGroup231}"
                        style="@style/txtSolidRounded_3" tools:text="@string/msg_nguy_n_th_nh_mi"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtGroup232"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_16pxv"
                        android:layout_width="match_parent"
                        android:paddingBottom="@dimen/_12pxv"
                        android:paddingStart="@dimen/_10pxh"
                        android:paddingTop="@dimen/_12pxv"
                        android:singleLine="true"
                        android:text="@{xemQuNLBNHNgVM.xemQuNLBNHNgModel.txtGroup232}"
                        style="@style/txtSolidRounded_3" tools:text="@string/lbl_ch_u_ph_c_h_u"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtGroup233"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_16pxv"
                        android:layout_width="match_parent"
                        android:paddingBottom="@dimen/_14pxv"
                        android:paddingStart="@dimen/_10pxh"
                        android:paddingTop="@dimen/_10pxv"
                        android:singleLine="true"
                        android:text="@{xemQuNLBNHNgVM.xemQuNLBNHNgModel.txtGroup233}"
                        style="@style/txtSolidRounded_3" tools:text="@string/msg_nguy_n_th_nh"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtGroup234"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_16pxv"
                        android:layout_width="match_parent"
                        android:paddingBottom="@dimen/_14pxv"
                        android:paddingStart="@dimen/_10pxh"
                        android:paddingTop="@dimen/_10pxv"
                        android:singleLine="true"
                        android:text="@{xemQuNLBNHNgVM.xemQuNLBNHNgModel.txtGroup234}"
                        style="@style/txtSolidRounded_3" tools:text="@string/lbl_l_th_nh_nam"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtGroup236"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_16pxv"
                        android:layout_width="match_parent"
                        android:paddingBottom="@dimen/_14pxv"
                        android:paddingStart="@dimen/_10pxh"
                        android:paddingTop="@dimen/_10pxv"
                        android:singleLine="true"
                        android:text="@{xemQuNLBNHNgVM.xemQuNLBNHNgModel.txtGroup236}"
                        style="@style/txtSolidRounded_3" tools:text="@string/msg_nguy_n_th_than"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtGroup237"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_16pxv"
                        android:layout_width="match_parent"
                        android:paddingBottom="@dimen/_12pxv"
                        android:paddingStart="@dimen/_10pxh"
                        android:paddingTop="@dimen/_12pxv"
                        android:singleLine="true"
                        android:text="@{xemQuNLBNHNgVM.xemQuNLBNHNgModel.txtGroup237}"
                        style="@style/txtSolidRounded_3" tools:text="@string/lbl_phan_minh_t_ng"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtGroup238"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_16pxv"
                        android:layout_width="match_parent"
                        android:paddingBottom="@dimen/_13pxv"
                        android:paddingStart="@dimen/_10pxh"
                        android:paddingTop="@dimen/_11pxv"
                        android:singleLine="true"
                        android:text="@{xemQuNLBNHNgVM.xemQuNLBNHNgModel.txtGroup238}"
                        style="@style/txtSolidRounded_3" tools:text="@string/lbl_cao_m_ng_tuy_n"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtGroup239"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_16pxv"
                        android:layout_width="match_parent"
                        android:paddingBottom="@dimen/_12pxv"
                        android:paddingStart="@dimen/_10pxh"
                        android:paddingTop="@dimen/_12pxv"
                        android:singleLine="true"
                        android:text="@{xemQuNLBNHNgVM.xemQuNLBNHNgModel.txtGroup239}"
                        style="@style/txtSolidRounded_3" tools:text="@string/lbl_ph_m_b_o_th"/>
                    <FrameLayout
                        android:id="@+id/frameStackrectanglenine"
                        android:layout_height="@dimen/_1pxv"
                        android:layout_marginTop="@dimen/_16pxv" android:layout_width="@dimen/_368pxh">
                        <View
                            android:background="@drawable/rectangle_bg_cyan_a400_19_radius_10"
                            android:id="@+id/viewRectangleNine"
                            android:layout_gravity="bottom|start"
                            android:layout_height="@dimen/_47pxv" android:layout_width="@dimen/_368pxh"/>
                        <TextView android:ellipsize="end"
                            android:gravity="top|start"
                            android:id="@+id/txtNguynThThu"
                            android:layout_gravity="bottom|start"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_10pxh"
                            android:layout_marginStart="@dimen/_10pxh"
                            android:layout_marginTop="@dimen/_10pxv"
                            android:layout_width="match_parent"
                            android:singleLine="true"
                            android:text="@{xemQuNLBNHNgVM.xemQuNLBNHNgModel.txtNguynThThu}"
                            style="@style/txtAnekLatinbold20" tools:text="@string/msg_nguy_n_th_thu"/>
                    </FrameLayout>
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
