<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="xemBNHNgCANhNViNVM" type="com.demovnpt.app.modules.xembnhngcanhnvin.data.viewmodel.XemBNHNgCANhNViNVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearColumnellipsetwo"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <LinearLayout android:id="@+id/linearXemBnHngC"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylewhite_A700">
            <FrameLayout android:id="@+id/frameStackellipsetwo"
                android:layout_gravity="start"
                android:layout_height="@dimen/_172pxv"
                android:layout_marginEnd="@dimen/_10pxh" android:layout_width="@dimen/_289pxh">
                <ImageView android:id="@+id/imageEllipseTwo"
                    android:layout_gravity="top|start"
                    android:layout_height="@dimen/_158pxh"
                    android:layout_marginBottom="@dimen/_10pxv"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_width="@dimen/_106pxh"
                    android:scaleType="fitXY"
                    imageRes="@{@drawable/img_ellipse2_6}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_ellipse2_6"/>
                <ImageView android:id="@+id/imageEllipseOne"
                    android:layout_gravity="top|start"
                    android:layout_height="@dimen/_95pxh"
                    android:layout_marginBottom="@dimen/_10pxv"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_width="@dimen/_200pxh"
                    android:scaleType="fitXY"
                    imageRes="@{@drawable/img_ellipse1_6}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_ellipse1_6"/>
                <ImageView android:id="@+id/imageRectangleSeven"
                    android:layout_gravity="bottom|end"
                    android:layout_height="@dimen/_150pxh"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_10pxv"
                    android:layout_width="@dimen/_150pxh"
                    android:scaleType="fitXY"
                    imageRes="@{@drawable/img_rectangle7}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_rectangle7"/>
            </FrameLayout>
            <LinearLayout android:gravity="end"
                android:id="@+id/linearRowqunlbnhn"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_9pxv"
                android:layout_width="match_parent"
                android:orientation="horizontal" style="@style/groupStyleteal_200_26">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtQunLBnHn"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_7pxv"
                    android:layout_marginStart="@dimen/_137pxh"
                    android:layout_marginTop="@dimen/_10pxv"
                    android:layout_weight="0.87"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{xemBNHNgCANhNViNVM.xemBNHNgCANhNViNModel.txtQunLBnHn}"
                    style="@style/txtAnekLatinsemibold20" tools:text="@string/msg_qu_n_l_b_n_h_n3"/>
                <ImageView android:id="@+id/imageIconparksolid"
                    android:layout_height="@dimen/_24pxh"
                    android:layout_marginBottom="@dimen/_8pxv"
                    android:layout_marginEnd="@dimen/_24pxh"
                    android:layout_marginStart="@dimen/_88pxh"
                    android:layout_marginTop="@dimen/_8pxv"
                    android:layout_width="@dimen/_24pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_iconparksolid"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_iconparksolid"/>
            </LinearLayout>
            <TextView android:ellipsize="end" android:gravity="start"
                android:id="@+id/txtTnNhnVin"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_30pxh"
                android:layout_marginStart="@dimen/_30pxh"
                android:layout_marginTop="@dimen/_33pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{xemBNHNgCANhNViNVM.xemBNHNgCANhNViNModel.txtTnNhnVin}"
                style="@style/txtAnekLatinregular20" tools:text="@string/msg_t_n_nh_n_vi_n"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtSimDing"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_30pxh"
                android:layout_marginStart="@dimen/_30pxh"
                android:layout_marginTop="@dimen/_22pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{xemBNHNgCANhNViNVM.xemBNHNgCANhNViNModel.txtSimDing}"
                style="@style/txtAnekLatinbold20" tools:text="@string/lbl_sim_di_ng"/>
            <LinearLayout android:id="@+id/linearRowchtiufifty"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_30pxh"
                android:layout_marginStart="@dimen/_30pxh"
                android:layout_marginTop="@dimen/_11pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtChTiuFifty"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_weight="0.48"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{xemBNHNgCANhNViNVM.xemBNHNgCANhNViNModel.txtChTiuFifty}"
                    style="@style/txtAnekLatinregular20" tools:text="@string/lbl_ch_ti_u_50"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtSLngThirtyFive"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_146pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.52"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{xemBNHNgCANhNViNVM.xemBNHNgCANhNViNModel.txtSLngThirtyFive}"
                    style="@style/txtAnekLatinregular20" tools:text="@string/lbl_s_l_ng_35"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowcnlififteen"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_30pxh"
                android:layout_marginStart="@dimen/_30pxh"
                android:layout_marginTop="@dimen/_14pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtCnLiFifteen"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.49"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{xemBNHNgCANhNViNVM.xemBNHNgCANhNViNModel.txtCnLiFifteen}"
                    style="@style/txtAnekLatinregular20" tools:text="@string/lbl_c_n_l_i_15"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtTLSeventy"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginStart="@dimen/_156pxh"
                    android:layout_weight="0.51"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{xemBNHNgCANhNViNVM.xemBNHNgCANhNViNModel.txtTLSeventy}"
                    style="@style/txtAnekLatinregular20" tools:text="@string/lbl_t_l_70"/>
            </LinearLayout>
            <TextView android:ellipsize="end"
                android:id="@+id/txtNhnXttY"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_30pxh"
                android:layout_marginStart="@dimen/_30pxh"
                android:layout_marginTop="@dimen/_13pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{xemBNHNgCANhNViNVM.xemBNHNgCANhNViNModel.txtNhnXttY}"
                style="@style/txtAnekLatinregular20" tools:text="@string/msg_nh_n_x_t_t_y"/>
            <TextView android:gravity="center_horizontal"
                android:id="@+id/txtChThchHon"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_30pxh"
                android:layout_marginStart="@dimen/_30pxh"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_width="match_parent"
                android:text="@{xemBNHNgCANhNViNVM.xemBNHNgCANhNViNModel.txtChThchHon}"
                style="@style/txtAnekLatinregular20" tools:text="@string/msg_ch_th_ch_ho_n"/>
            <FrameLayout android:id="@+id/frameStackellipsefour"
                android:layout_gravity="end"
                android:layout_height="@dimen/_286pxv"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_223pxv" android:layout_width="@dimen/_172pxh">
                <ImageView android:id="@+id/imageEllipseFour"
                    android:layout_gravity="top|end"
                    android:layout_height="@dimen/_200pxh"
                    android:layout_marginBottom="@dimen/_10pxv"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_width="@dimen/_86pxh"
                    android:scaleType="fitXY"
                    imageRes="@{@drawable/img_ellipse4_6}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_ellipse4_6"/>
                <ImageView android:id="@+id/imageEllipseThree"
                    android:layout_gravity="bottom|start"
                    android:layout_height="@dimen/_200pxv"
                    android:layout_marginTop="@dimen/_10pxv"
                    android:layout_width="match_parent"
                    android:scaleType="fitXY"
                    imageRes="@{@drawable/img_ellipse3_6}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_ellipse3_6"/>
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
